--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,18 @@
         </div>
       </div>
     </div>
+
+    <div class="boru-section collaboration">
+      <div class="container">
+        <div class="row flex-row collaboration-header">
+         <h3>Brian Boru Fencing Club is a joint collaboration between</h3>
+        </div>
+        <div class="row flex-row collaboration-logos">
+          <div class="fencing-ireland"><img src="images/Fencing_Ireland_Logo.png" height="300" width="300"></div>
+          <div class="pentathlon-ireland"><img src="images/pentathlon-ireland-logo.png"></div>
+        </div>
+      </div>
+    </div>
     <!-- Footer -->
     <hr>
     <footer>
