Updated collab section

--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="row flex-row collaboration-logos">
           <div class="fencing-ireland"><img src="images/Fencing_Ireland_Logo.png" height="300" width="300"></div>
-          <div class="pentathlon-ireland"><img src="images/pentathlon-ireland-logo.png"></div>
+          <div class="pentathlon-ireland"><img src="images/pentathlon-ireland-logo.png" height="300"></div>
         </div>
       </div>
     </div>
