Added new Pentathlon Logo

--- a/app/index.html
+++ b/app/index.html
@@ -112,8 +112,8 @@
          <h3>Brian Boru Fencing Club is a joint collaboration between</h3>
         </div>
         <div class="row flex-row collaboration-logos">
-          <div class="fencing-ireland"><img src="images/Fencing_Ireland_Logo.png" height="300" width="300"></div>
-          <div class="pentathlon-ireland"><img src="images/pentathlon-ireland-logo.png"></div>
+          <div class="fencing-ireland-logo"><img src="images/Fencing_Ireland_Logo.png" height="300" width="300"></div>
+          <div class="pentathlon-ireland-logo"><img src="images/Pentathlon-Logo.png" height="160" width="160"></div>
         </div>
       </div>
     </div>
