--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
     
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="boru-header navbar navbar-fixed-top" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -97,19 +97,34 @@
     </header>
     <div class="boru-section-break how-to-start">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3"><img src="images/tshirt-300x267-300x267.png" height="100" width="100"></div>
-          <div class="col-lg-3"><img src="images/trousers-152x300-152x300.png" height="100" width="100"></div>
-          <div class="col-lg-3"><img src="images/shoes-300x300.png" height="100" width="100"></div>
-          <div class="col-lg-3"><img src="images/smileyface.png" height="100" width="100"></div>
+        <div class="row flex-row how-to-start-header">
+          <h3>What do I need to start fencing?</h3>
+        </div>
+        <div class="row flex-row how-to-start-icons">
+          <div class="icon">
+            <img src="images/shoe_cc_white.png" height="180">
+            <div class="icon-text">Comfortable Runners</div>
+          </div>
+          <div class="icon">
+            <img src="images/shoe_cc_white.png" height="180">
+            <div class="icon-text">Comfortable Runners</div>
+          </div>
+          <div class="icon">
+            <img src="images/shoe_cc_white.png" height="180">
+            <div class="icon-text">Comfortable Runners</div>
+          </div>
+          <div class="icon">
+            <img src="images/shoe_cc_white.png" height="180">
+            <div class="icon-text">Comfortable Runners</div>
+          </div>
+          
         </div>
       </div>
     </div>
-
     <div class="boru-section collaboration">
       <div class="container">
         <div class="row flex-row collaboration-header">
-         <h3>Brian Boru Fencing Club is a joint collaboration between</h3>
+          <h3>Brian Boru Fencing Club is proudly supported by</h3>
         </div>
         <div class="row flex-row collaboration-logos">
           <div class="fencing-ireland-logo"><img src="images/Fencing_Ireland_Logo.png" height="300" width="300"></div>
@@ -123,11 +138,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p>Made by Handsome Software</p>
+            <p>Made with <i class="fa fa fa-heart"></i> by Handsome Software</p>
           </div>
         </div>
       </div>
     </footer>
+  
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
