--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,7 @@
         <div class="row flex-row how-to-start-icons">
           <div class="icon">
             <img src="images/shoe_cc_white.png" height="180">
-            <div class="icon-text">Comfortable Runners</div>
+            <div class="icon-text">T-Shirt</div>
           </div>
           <div class="icon">
             <img src="images/shoe_cc_white.png" height="180">
@@ -111,11 +111,11 @@
           </div>
           <div class="icon">
             <img src="images/shoe_cc_white.png" height="180">
-            <div class="icon-text">Comfortable Runners</div>
+            <div class="icon-text">Tracksuit</div>
           </div>
           <div class="icon">
             <img src="images/shoe_cc_white.png" height="180">
-            <div class="icon-text">Comfortable Runners</div>
+            <div class="icon-text">Lots of Energy</div>
           </div>
           
         </div>
