--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
             <div class="icon-text">Comfortable Runners</div>
           </div>
           <div class="icon">
-            <img src="images/shoe_cc_white.png" height="180">
+            <img src="images/tracksuit.png" height="180">
             <div class="icon-text">Tracksuit</div>
           </div>
           <div class="icon">
