Added TShirt and Map

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,69 @@
         <span class="icon-next"></span>
       </a>
     </header>
+    
+    <div class="boru-section our-club">
+      <div class="container">
+        <div class="row flex-row our-club-header">
+          <h3>Where to find us?</h3>
+        </div>
+        <div class="row flex-row our-club-details">
+          <div class="training">
+            <div class="information">We train in the National sports campus</div>
+            <div class="training-table">
+              <table class="table table-responsive">
+                <tbody>
+                  <tr>
+                    <td>
+                      Monday
+                    </td>
+                    <td>
+                      6pm - 10pm
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Tuesday
+                    </td>
+                    <td>
+                      6pm - 10pm
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                    Wednesday
+                    </td>
+                    <td>
+                      6pm - 10pm
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Thursday
+                    </td>
+                    <td>
+                     6pm - 10pm
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                     Friday
+                    </td>
+                    <td>
+                      6pm - 10pm
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9515.819521349445!2d-6.350464!3d53.397747!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe4aae10fc6eade5b!2sNational+Modern+Pentathlon+Centre!5e0!3m2!1sen!2sie!4v1461951757379" width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="boru-section-break how-to-start">
       <div class="container">
         <div class="row flex-row how-to-start-header">
@@ -102,7 +165,7 @@
         </div>
         <div class="row flex-row how-to-start-icons">
           <div class="icon">
-            <img src="images/shoe_cc_white.png" height="180">
+            <img src="images/tshirt.png" height="180">
             <div class="icon-text">T-Shirt</div>
           </div>
           <div class="icon">
