Updated What Do I need section

--- a/app/index.html
+++ b/app/index.html
@@ -177,8 +177,8 @@
             <div class="icon-text">Tracksuit</div>
           </div>
           <div class="icon">
-            <img src="images/shoe_cc_white.png" height="180">
-            <div class="icon-text">Lots of Energy</div>
+            <img src="images/water.png" height="180">
+            <div class="icon-text">Water</div>
           </div>
           
         </div>
